anaysis and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.venv/
-
-__pycache__/
-
-.pytest_cache/
-
 .env
-
-outputs/
+.venv/
+env/
+venv/
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+__pycache__/
+*.py[cod]
+*.log
